<resources>
    <string name="app_name">Password</string>
    <string name="master_password">Master Password</string>
    <string name="decrypt">Decrypt</string>
    <string name="android_password_manager">Android Password Manager</string>
    <string name="android_password_generator">Android Password Generator</string>
    <string name="website">Website</string>
    <string name="password2">Password</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="show_all">Show All</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="important">Important</string>
    <string name="settings">Settings</string>
    <string name="accounts">Accounts</string>
    <string name="unhide">Unhide</string>
    <string name="show_accounts">SHOW ACCOUNTS</string>
    <string name="password">Password</string>
    <string name="password_input">Password input</string>
    <string name="hello_">Hello</string>
    <string name="login2">LOGIN</string>
    <string name="decrypt2">DECRYPT</string>
    <string name="create_master_password">Create Master Password</string>
    <string name="create_button">Create</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>